# STM32_Skipper_Development

./: .gitmodules  README.md
HMI/: .cproject  .project  HMI Debug.launch  STM32F469IITX_FLASH.ld  STM32F469IITX_RAM.ld
HMI/GUI_SLStudio/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.h
HMI/GUI_SLStudio/images/: ui_img_carolina_reaper_icon_130x130_png.c  ui_img_carolina_reaper_icon_250x250_png.c  ui_img_duck_80x80_png.c  ui_img_graph_png.c  ui_img_habonero_icon_scaled_png.c  ui_img_onion_icon_130x130_png.c  ui_img_onion_icon_250x250_png.c  ui_img_pause_icon_60x60_png.c  ui_img_play_icon_60x60_png.c  ui_img_settings_icon_60x60_png.c  ui_img_statistics_icon_60x60_png.c  ui_img_toolbox_icon_60x60_png.c
HMI/GUI_SLStudio/screens/: ui_Calendar.c  ui_Calendar.h  ui_Main.c  ui_Main.h  ui_Profiles.c  ui_Profiles.h  ui_Settings.c  ui_Settings.h  ui_Statistics.c  ui_Statistics.h  ui_Status.c  ui_Status.h  ui_Tools.c  ui_Tools.h  ui_Water.c  ui_Water.h
Lighting_Control_Board/: .cproject  .project  Lighting_Control_Board Debug.launch
STM32F103C8T6/: .cproject  STM32F103C8T6 Debug.launch
STM32F469NIH6/: .cproject  .project  STM32F469NIH6 Debug.launch  STM32F469NIHX_FLASH.ld  STM32F469NIHX_RAM.ld
Sensor_Board/: .cproject  .project  Sensor_Board Debug.launch
Skipper Full USB Driver 6/: .cproject  .project
Skipper Full USB Driver Git/: Skipper Full USB Driver 2 Debug.launch  Skipper Full USB Driver 4 Debug.launch
Skipper Template/: .cproject  .project  Skipper Template.launch
Skipper USART Developement/: .project
USART Development/: .cproject  (+4 more)
(+404 files in other folders)
